.gitignore /src and /test

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 /coverage
 
 # production
-/build
 
 # misc
 .DS_Store
@@ -27,3 +26,5 @@ System_definition.rtf
 /util_tools
 TAP_Plan.rtf
 /bin/*
+/src
+/test
