--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
 	"private": true,
 	"homepage": "http://ivanoid768.github.io/tourist-attractions-photos",
 	"dependencies": {
-		"antd": "^3.12.1",
-		"apollo-boost": "^0.4.0",
-		"axios": "^0.18.0",
-		"graphql": "^14.3.0",
-		"react": "^16.7.0",
+		"antd": "^3.19.2",
+		"apollo-boost": "^0.4.2",
+		"axios": "^0.18.1",
+		"graphql": "^14.3.1",
+		"react": "^16.8.6",
 		"react-apollo": "^2.5.6",
-		"react-dom": "^16.7.0",
+		"react-dom": "^16.8.6",
+		"react-redux": "^7.0.3",
 		"react-router-dom": "^4.3.1",
-		"react-scripts": "2.1.3"
+		"react-scripts": "2.1.3",
+		"redux": "^4.0.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
